# self_upgrade

./: .gitignore  Cargo.toml  README.md
examples/: demo.rs
src/: appbin.rs  config.rs  lib.rs  status.rs  test.rs  types.rs  upgrade.rs  version.rs
